--- a/app/src/main/res/layout/layout_shopper_trip_date.xml
+++ b/app/src/main/res/layout/layout_shopper_trip_date.xml
@@ -9,16 +9,43 @@
         android:orientation="vertical"
         android:paddingBottom="20dp">
 
-        <TextView
-            android:id="@+id/tv_year"
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="15dp"
-            android:textColor="@color/app_txt_black"
-            android:textSize="16sp"
-            tools:text="2017-05-09" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:visibility="invisible"
+                android:id="@+id/img_previous"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/more_right" />
+
+            <TextView
+                android:id="@+id/tv_year"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textColor="@color/app_txt_black"
+                android:textSize="16sp"
+                tools:text="2017-05-09" />
+
+            <ImageView
+                android:id="@+id/img_next"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/more_right" />
+
+        </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
