预约订单列表 详情 完善

--- a/app/src/main/res/layout/activity_appointment_details.xml
+++ b/app/src/main/res/layout/activity_appointment_details.xml
@@ -38,11 +38,12 @@
                         android:paddingTop="10dp">
 
                         <TextView
+                            android:id="@+id/tv_appio_type"
                             android:layout_width="100dp"
                             android:layout_height="wrap_content"
-                            android:text="预约美导"
                             android:textColor="@color/app_txt_black"
-                            android:textSize="14sp" />
+                            android:textSize="14sp"
+                            tools:text="预约美导" />
 
                         <TextView
                             android:id="@+id/tv_name"
@@ -339,7 +340,7 @@
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:visibility="gone"
-                tools:text="确认收获" />
+                android:text="前往评价" />
 
             <Button
                 android:id="@+id/btn_state_do"
