--- a/app/src/main/res/layout/layout_frist_page_headr.xml
+++ b/app/src/main/res/layout/layout_frist_page_headr.xml
@@ -113,6 +113,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/lin_teacher"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -135,6 +136,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/lin_experts"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
