--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -8,41 +8,6 @@
         android:background="@color/white"
         android:orientation="vertical">
 
-        <View
-            style="@style/style_split_line"
-            android:layout_height="10dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:background="@color/white"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_orderId"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_weight="1"
-                android:enabled="true"
-                android:maxLines="1"
-                android:textColor="@color/app_txt_gray"
-                android:textSize="13sp"
-                tools:text="订单编号：" />
-
-            <TextView
-                android:id="@+id/tv_state"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="15dp"
-                android:gravity="right"
-                android:textColor="@color/app_txt_red"
-                android:textSize="13sp"
-                tools:text="2017" />
-
-        </LinearLayout>
-
         <View style="@style/style_split_line" />
 
         <LinearLayout
@@ -74,7 +39,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/tv_name"
+                        android:id="@+id/tv_week"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -88,7 +53,7 @@
                         tools:text="23232" />
 
                     <TextView
-                        android:id="@+id/tv_time"
+                        android:id="@+id/tv_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -103,7 +68,7 @@
                         tools:text="23232" />
 
                     <TextView
-                        android:id="@+id/tv_days"
+                        android:id="@+id/tv_minutes"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
