--- a/app/src/main/res/layout/layout_mypage_boos.xml
+++ b/app/src/main/res/layout/layout_mypage_boos.xml
@@ -51,6 +51,7 @@
             app:txt_left="我的评论" />
 
         <com.cdkj.baselibrary.views.RowInfoLayout
+            android:id="@+id/row_row_team"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -58,6 +59,7 @@
             app:txt_left="团队顾问" />
 
         <com.cdkj.baselibrary.views.RowInfoLayout
+            android:id="@+id/row_help_center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
