--- a/app/src/main/res/layout/item_trip.xml
+++ b/app/src/main/res/layout/item_trip.xml
@@ -39,6 +39,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:visibility="gone"
                         android:id="@+id/tv_week"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
