--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="app_txt_red">#f56066</color>
     <color name="app_txt_black">#3d3d3d</color>
     <color name="app_txt_gray">#999999</color>
+
     <color name="app_title_bg">#f56066</color>
     <color name="app_invitation_friend_yellow">#fdf9e7</color>
     <color name="integral_yellow">#ffbe00</color>
@@ -20,5 +21,6 @@
     <color name="address_select">#48b0fb</color>
     <color name="comment_tag">#999999</color>
 
-
+    <color name="app_logo_select_un">#8d8d8d</color>
+    <color name="app_logo_select">#f56066</color>
 </resources>
