--- a/app/src/main/res/layout/activity_user_info_update.xml
+++ b/app/src/main/res/layout/activity_user_info_update.xml
@@ -81,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="15dp"
-                android:text="广告语"
+                android:text="个性签名"
                 android:textColor="@color/app_txt_black"
                 android:textSize="14sp" />
 
@@ -92,7 +92,7 @@
                 android:layout_marginRight="@dimen/layout_right_interval"
                 android:layout_weight="1"
                 android:background="@null"
-                android:hint="请填写广告语"
+                android:hint="请填写签名"
                 android:textColor="@color/app_txt_black"
                 android:textColorHint="@color/app_txt_gray"
                 android:textSize="14sp" />
