--- a/app/src/main/res/layout/layout_advice_header.xml
+++ b/app/src/main/res/layout/layout_advice_header.xml
@@ -56,6 +56,7 @@
             android:paddingRight="@dimen/layout_right_interval">
 
             <TextView
+                android:id="@+id/tv_show_all"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
