--- a/app/src/main/res/layout/layout_frist_page_headr.xml
+++ b/app/src/main/res/layout/layout_frist_page_headr.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:banner="http://schemas.android.com/tools">
+    xmlns:banner="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,7 +43,6 @@
                 android:layout_weight="1"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:text="遇见未来的自己遇见未来的自己"
                 android:textColor="@color/app_txt_black"
                 android:textSize="16sp" />
 
